# adventofcode2021

./: Cargo.toml  readme.md
day1/: day1.rs
day10/: day10.rs  syntax.rs
day11/: cavern.rs  day11.rs
day12/: cave.rs  day12.rs
day13/: camera.rs  day13.rs
day14/: day14.rs  polymerization.rs
day15/: chitons.rs  day15.rs
day16/: day16.rs  packet.rs
day17/: day17.rs
day18/: day18.rs  snailfish_math.rs
day19/: day19.rs  scanners.rs
day2/: day2.rs  submarine.rs
day20/: day20.rs  image.rs
day21/: day21.rs  dice.rs
day22/: day22.rs  reactor.rs
day23/: part1.txt  part2.txt
day24/: notes.txt  part1.md  part2.md
day25/: day25.rs  sea_cucumber.rs
day3/: criteria.rs  day3.rs
day4/: bingo.rs  day4.rs
day5/: day5.rs  lines.rs
day6/: day6.rs  fish.rs
day7/: day7.rs
day8/: day8.rs
day9/: basin.rs  day9.rs
