[package]
name = "advent_of_code_2020"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "day1/day1.rs"

[[bin]]
name = "day2"
path = "day2/day2.rs"

[[bin]]
name = "day3"
path = "day3/day3.rs"

[[bin]]
name = "day4"
path = "day4/day4.rs"

[[bin]]
name = "day5"
path = "day5/day5.rs"

[[bin]]
name = "day6"
path = "day6/day6.rs"

[[bin]]
name = "day7"
path = "day7/day7.rs"

[[bin]]
name = "day8"
path = "day8/day8.rs"

[[bin]]
name = "day9"
path = "day9/day9.rs"

[[bin]]
name = "day10"
path = "day10/day10.rs"

[[bin]]
name = "day11"
path = "day11/day11.rs"

[[bin]]
name = "day12"
path = "day12/day12.rs"

[[bin]]
name = "day13"
path = "day13/day13.rs"

[[bin]]
name = "day14"
path = "day14/day14.rs"

[[bin]]
name = "day15"
path = "day15/day15.rs"

[[bin]]
name = "day16"
path = "day16/day16.rs"

[[bin]]
name = "day17"
path = "day17/day17.rs"
required-features = ["regex"]

[[bin]]
name = "day18"
path = "day18/day18.rs"

[[bin]]
name = "day19"
path = "day19/day19.rs"

[[bin]]
name = "day20"
path = "day20/day20.rs"

[[bin]]
name = "day21"
path = "day21/day21.rs"
required-features = ["lru"]

[[bin]]
name = "day22"
path = "day22/day22.rs"
required-features = ["regex"]

[[bin]]
name = "day25"
path = "day25/day25.rs"

[dependencies]
regex = { version = "1", optional = true }
lru = { version = "0.7", optional = true }
